<resources>
    <string name="app_name">好时光</string>
    <string name="title_activity_main">好时光</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="timeline">时间轴</string>
    <string name="message">微聊</string>
    <string name="application">应用</string>
    <string name="profile">我</string>
    <string name="weekly_plan">好时光周计划</string>
    <string name="weiyou">微邮</string>
    <string name="weizhi">微知</string>
    <string name="weipan">微盘</string>
    <string name="weiliao">微聊</string>
    <string name="weibo">微博</string>
    <string name="inspur_weekplan">集团周计划</string>
    <string name="inspur_mbo">集团MBO</string>
    <string name="message_item_name">姓名</string>
    <string name="message_item_time">时间</string>
    <string name="message_item_content">内容</string>
    <string name="my_department">信息服务事业部</string>
    <string name="collection">收藏</string>
    <string name="company">公司</string>
    <string name="login_web">面对面</string>
    <string name="help">帮助和反馈</string>
    <string name="recommend">推荐给好友</string>
    <string name="settings">设置</string>
    <string name="in_group">正在聊天</string>
    <string name="filter_group">已屏蔽人员</string>
    <string name="out_group">已退出人员</string>
    <string name="group_name">任务名称</string>
    <string name="group_time">任务时间</string>
    <string name="group_address">任务地点</string>
    <string name="group_clean">清空任务记录</string>
    <string name="exit_group">退出该任务</string>
    <string name="recent_contact">联系人</string>
    <string name="contact_group">群</string>
    <string name="department_member">部门人员</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="chat_topic_hint">可在此输入群名称</string>

    <string name="set_account">账号设置</string>
    <string name="message_notify">消息通知</string>
    <string name="common_set">通用</string>
    <string name="app_set">应用设置</string>
    <string name="version_update">版本更新</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_create_mail">写邮件</string>
    <string name="action_search_mail">搜邮件</string>
    <string name="side_action_inbox">收件箱</string>
    <string name="side_action_unread_mail">未读邮件</string>
    <string name="side_action_sent_mail">已发送邮件</string>
    <string name="side_action_draft">草稿箱</string>
    <string name="side_action_outbox">发件箱</string>
    <string name="side_action_deleted_mail">已删除邮件</string>
    <string name="waner_about_content">全新的企业沟通协作平台，加强同事间的交流，提高办事效率。传递正能量，激发新能量！</string>
    <string name="waner_about_tel">服务电话：0531-85105848</string>
    <string name="pull_to_load">上拉同步更多邮件</string>
    <string name="loading">正在同步服务器邮件</string>
    <string name="release_to_load">松开开始同步服务器邮件</string>
    <string name="send_mail_btn">发送</string>
    <string name="select_contact_ok_btn">确定</string>

    <string name="wy_settings">设置</string>
    <string name="wy_exit">退出</string>
    <string name="wy_send_time">发送时间：</string>
    <string name="wy_listview_header_hint_normal">下拉检查新邮件</string>
    <string name="wy_listview_header_hint_ready">松开开始检查</string>
    <string name="wy_listview_header_hint_loading">正在加载...</string>
    <string name="wy_listview_header_last_time">上次更新时间：</string>
    <string name="wy_listview_footer_hint_normal">同步更多邮件</string>
    <string name="wy_listview_footer_hint_ready">松开开始同步服务器邮件</string>

    <string name="wy_write_mail_signature">--- 发自我的微邮Android客户端</string>
    <string name="wy_mailer">Htime-VU-Client</string>
    <string name="attachment_finish_download">已下载</string>
    <string name="attachment_not_download">未下载</string>
    <string name="wy_attachment">附件</string>
    <string name="unfold_rcpts">展开</string>
    <string name="fold_rcpts">收起</string>
    <string name="welcome_to_weiyou">欢迎使用微邮</string>

</resources>
