<?xml version="1.0" encoding="utf-8"?>
<com.inspur.playwork.view.timeline.addtask.FragmentAnimLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_set_account"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/set_account"
                android:textSize="16sp"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/tv_message_notify"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/message_notify"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/tv_common_set"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/common_set"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/tv_app_set"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/app_set"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/tv_version_update"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/version_update"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/tv_about"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/about"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

        </LinearLayout>
    </ScrollView>
</com.inspur.playwork.view.timeline.addtask.FragmentAnimLayout>