<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/common_bg_grey"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center">

        <AutoCompleteTextView
            android:id="@+id/actv_search_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="搜索"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_contact_list_tag"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#e1e1e6"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_choose_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/recent_contact"
            android:textColor="@color/contact_list_tag_normal"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_choose_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minEms="3"
            android:text="@string/contact_group"
            android:textColor="@color/contact_list_tag_normal"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_choose_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/department_member"
            android:textColor="@color/contact_list_tag_normal"
            android:textSize="15dp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_contact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_contact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:visibility="gone" />
</LinearLayout>