<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:background="@color/toolbar_bg"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/rl_timeline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_timeline"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_image_height"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/selector_toolbar_timeline" />

        <TextView
            android:id="@+id/tv_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:text="@string/timeline"
            android:textColor="@color/toolbar_text_normal_color"
            android:textSize="@dimen/toolbar_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_message"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_image_height"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/selector_toolbar_message" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/message"
            android:textColor="@color/toolbar_text_normal_color"
            android:textSize="@dimen/toolbar_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_application"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_application"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_image_height"
            android:layout_gravity="center_horizontal|top"
            android:scaleType="centerInside"
            android:src="@drawable/selector_toolbar_application" />

        <TextView
            android:id="@+id/tv_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/application"
            android:textColor="@color/toolbar_text_normal_color"
            android:textSize="@dimen/toolbar_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onTabClicked"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_image_height"
            android:layout_gravity="center_horizontal|top"
            android:scaleType="centerInside"
            android:src="@drawable/selector_toolbar_profile" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/profile"
            android:textColor="@color/toolbar_text_normal_color"
            android:textSize="@dimen/toolbar_text_size" />
    </LinearLayout>
</LinearLayout>